--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FiseCoco & Ananias Wedding</title>
+    <title>尹怀可与魏萌的婚礼邀请函</title>
     <meta itemprop="og:title" content="尹怀可与魏萌的婚礼邀请函，诚挚邀请您见证我们的幸福时刻。2025年1月24日，期待您的光临！" />
     <meta itemprop="description" content="尹怀可与魏萌的婚礼邀请函，诚挚邀请您见证我们的幸福时刻。2025年1月24日，期待您的光临！" />
     <meta property="og:description" content="尹怀可与魏萌的婚礼邀请函，诚挚邀请您见证我们的幸福时刻。2025年1月24日，期待您的光临！" />
